Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -50,13 +50,36 @@
                         <span class="badge">C#</span>
                         <span class="badge">HTML</span>
                         <span class="badge">CSS</span>
-                        <!-- Add more badges as needed -->
+                        <span class="badge">JavaScript</span>
+                        <span class="badge">Python</span>
+                        <span class="badge">Blazor WebAssembly</span>
+                        <span class="badge">MySQL</span>
                     </div>
                 <br/>
                 <h1 id="experience">Experience</h1>
-                <ul>
-                    <li>Experience details here</li>
-                </ul>
+                    <div class="experience-section">
+                        <div class="experience-item">
+                            <div class="experience-header">
+                                <h3>Eduwill</h3>
+                                <p>Consultant Manager | 2018.07 ~ 2021.12</p>
+                            </div>
+                            <ul>
+                                <li>Consulted and attracted an average of 15 customers a week, which brought in $2,000 per new customer</li>
+                                <li>Resolved customer complaints and dealt with client issues</li>
+                                <li>Initiated a new solution for the digital marketing that shrunk work time by approximately 50%</li>
+                            </ul>
+                        </div>
+                        <div class="experience-item">
+                            <div class="experience-header">
+                                <h3>Deloitte</h3>
+                                <p>Intern | 2018.04 ~ 2018.06</p>
+                            </div>
+                            <ul>
+                                <li>Translated various documents and internal regulations including financial statements</li>
+                                <li>Contributed to improving the effectiveness of communication within and outside the team</li>
+                            </ul>
+                        </div>
+                    </div>
                 <br/>
                 <h1 id="education">Education</h1>
                 <ul>
