Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="experience-item">
                             <div class="experience-header">
                                 <h3>Eduwill</h3>
-                                <p>Consultant Manager | 2018.07 ~ 2021.12</p>
+                                <p>Consultant Manager · 07/2018 ~ 12/2021</p>
                             </div>
                             <ul>
                                 <li>Consulted and attracted an average of 15 customers a week, which brought in $2,000 per new customer</li>
@@ -72,7 +72,7 @@
                         <div class="experience-item">
                             <div class="experience-header">
                                 <h3>Deloitte</h3>
-                                <p>Intern | 2018.04 ~ 2018.06</p>
+                                <p>Intern · 04/2018 ~ 06/2018</p>
                             </div>
                             <ul>
                                 <li>Translated various documents and internal regulations including financial statements</li>
@@ -82,9 +82,18 @@
                     </div>
                 <br/>
                 <h1 id="education">Education</h1>
-                <ul>
-                    <li>Education details here</li>
-                </ul>
+                <div class="education-section">
+                    <div class="education-item">
+                        <h3>Conestoga College, Waterloo, ON</h3>
+                        <p>Advanced Diploma of Software Engineering Technology</p>
+                        <p>09/2022 - Present</p>
+                    </div>
+                    <div class="education-item">
+                        <h3>Inha University, Republic of Korea</h3>
+                        <p>Bachelor of English Education</p>
+                        <p>03/2010 - 02/2015</p>
+                    </div>
+                </div>
                 <br/>
                 <h1 id="projects">Projects</h1>
                 <ul>
