Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -96,18 +96,17 @@
                 </div>
                 <br/>
                 <h1 id="projects">Projects</h1>
-                <ul>
-                    <li>
-                        <h2>Project 1</h2>
-                        <p>Project description goes here.</p>
-                        <a href="#">Project link</a>
-                    </li>
-                    <li>
-                        <h2>Project 2</h2>
-                        <p>Project description goes here.</p>
-                        <a href="#">Project link</a>
-                    </li>
-                </ul>
+                <div class="projects-section">
+                    <div class="project-item">
+                        <h2>Word Guessing Game</h2>
+                        <p>Developed a word guessing game using C#, WPF, TCP/IP, and multithreading. Applied agile methodologies to enhance team collaboration and project efficiency, enabling quick iteration and real-time feedback incorporation. Studied and applied design patterns to improve code quality and maintainability, streamlining the development process and enhancing software solution quality.</p>
+                    </div>
+                    <div class="project-item">
+                        <h2>Fresh Saver Service</h2>
+                        <p>Contributed to the development of ‘Fresh Saver Service’, a web-based application for food discounts, using C++, MySQL, HTML, and CSS. Designed a user-centric interface and backend database, streamlining access to discount information. This project honed my skills in analyzing user requirements and designing effective solutions, thereby preparing me for collaborative and goal-oriented IS development.</p>
+                    </div>
+                    <!-- 여기에 추가 프로젝트를 계속해서 추가할 수 있습니다. -->
+                </div>
             </div>
         </div>
     </main>
