Update index.html, styles.css, and images

--- a/index.html
+++ b/index.html
@@ -96,16 +96,27 @@
                 </div>
                 <br/>
                 <h1 id="projects">Projects</h1>
-                <div class="projects-section">
-                    <div class="project-item">
+                <div class="projects-container">
+                    <!-- 프로젝트 1 -->
+                    <!-- Word Guessing Game -->
+                <div class="project-item">
+                    <img src="C:\git\jiumiu.github.io\jiumiu.github.io\jiumiu.github.io\images\WordGuessingGame.png" alt="Word Guessing Game" class="project-image-left"/>
+                    <div class="project-description-right">
                         <h2>Word Guessing Game</h2>
-                        <p>Developed a word guessing game using C#, WPF, TCP/IP, and multithreading. Applied agile methodologies to enhance team collaboration and project efficiency, enabling quick iteration and real-time feedback incorporation. Studied and applied design patterns to improve code quality and maintainability, streamlining the development process and enhancing software solution quality.</p>
+                        <p>A multi-user word guessing game using C#, Windows Presentation Foundation (WPF), TCP/IP, Multithreading</p>
                     </div>
-                    <div class="project-item">
+                </div>
+
+                <!-- Fresh Saver Service -->
+                <div class="project-item">
+                    <div class="project-description-left">
                         <h2>Fresh Saver Service</h2>
-                        <p>Contributed to the development of ‘Fresh Saver Service’, a web-based application for food discounts, using C++, MySQL, HTML, and CSS. Designed a user-centric interface and backend database, streamlining access to discount information. This project honed my skills in analyzing user requirements and designing effective solutions, thereby preparing me for collaborative and goal-oriented IS development.</p>
+                        <p>A web-based food discounts application using C++, MySQL, HTML, and CSS</p>
                     </div>
-                    <!-- 여기에 추가 프로젝트를 계속해서 추가할 수 있습니다. -->
+                    <img src="C:\git\jiumiu.github.io\jiumiu.github.io\jiumiu.github.io\images\FreshSaver.GIF" alt="Fresh Saver Service" class="project-image-right"/>
+                </div>
+                
+                    <!-- 추가 프로젝트를 계속해서 이 방식으로 넣을 수 있습니다. -->
                 </div>
             </div>
         </div>
