--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- 프로젝트 1 -->
                     <!-- Word Guessing Game -->
                 <div class="project-item">
-                    <img src="C:\git\jiumiu.github.io\jiumiu.github.io\jiumiu.github.io\images\WordGuessingGame.png" alt="Word Guessing Game" class="project-image-left"/>
+                    <img src="C:/git/jiumiu.github.io/jiumiu.github.io/jiumiu.github.io/images/WordGuessingGame.png" alt="Word Guessing Game" class="project-image-left"/>
                     <div class="project-description-right">
                         <h2>Word Guessing Game</h2>
                         <p>A multi-user word guessing game using C#, Windows Presentation Foundation (WPF), TCP/IP, Multithreading</p>
@@ -113,7 +113,7 @@
                         <h2>Fresh Saver Service</h2>
                         <p>A web-based food discounts application using C++, MySQL, HTML, and CSS</p>
                     </div>
-                    <img src="C:\git\jiumiu.github.io\jiumiu.github.io\jiumiu.github.io\images\FreshSaver.GIF" alt="Fresh Saver Service" class="project-image-right"/>
+                    <img src="C:/git/jiumiu.github.io/jiumiu.github.io/jiumiu.github.io/images/FreshSaver.GIF" alt="Fresh Saver Service" class="project-image-right"/>
                 </div>
                 
                     <!-- 추가 프로젝트를 계속해서 이 방식으로 넣을 수 있습니다. -->
