Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content">
                 <h1 id="about-me">About Me</h1>
                 <p>I am a second year student at Conestoga College majoring in Software Engineering Technology. I decided to major in Software Engineering Technology because I love to be challenged, have a positive impact on people, and develop valuable services.</p>
-                <p> I am currently seeking a co-op job and am ready to utilize my comprehensive background in technology and customer engagement to drive innovation and solutions. </p>
+                <p> I am currently seeking a co-op job and I am ready to utilize my comprehensive background in technology and customer engagement to drive innovation and solutions. </p>
                 <br/>
                 <h1 id="tech">Tech Skills</h1>
                     <div class="skills">
@@ -52,8 +52,9 @@
                         <span class="badge">CSS</span>
                         <span class="badge">JavaScript</span>
                         <span class="badge">Python</span>
-                        <span class="badge">Blazor WebAssembly</span>
                         <span class="badge">MySQL</span>
+                        <span class="badge">WPF</span>
+                        <span class="badge">Blazor WebAssembly</span>
                     </div>
                 <br/>
                 <h1 id="experience">Experience</h1>
@@ -102,7 +103,13 @@
                     <img src="images/WordGuessingGame.png" alt="Word Guessing Game" class="project-image-left"/>
                     <div class="project-description-right">
                         <h2>Word Guessing Game</h2>
-                        <p>A multi-user word guessing game using C#, Windows Presentation Foundation (WPF), TCP/IP, Multithreading</p>
+                        <p>I worked on a multi-user application supporting a word guessing game. It aimed to use inter-process communications between Windows applications. </p>
+                        <div class="skills">
+                            <span class="badge">C#</span>
+                            <span class="badge">WPF</span>
+                            <span class="badge">TCP/IP</span>
+                            <span class="badge">Multithreading</span>
+                        </div>
                     </div>
                 </div>
 
@@ -110,7 +117,13 @@
                 <div class="project-item">
                     <div class="project-description-left">
                         <h2>Fresh Saver Service</h2>
-                        <p>A web-based food discounts application using C++, MySQL, HTML, and CSS</p>
+                        <p>Fresh Saver Service is a web-based application to address food waste by enabling consumers to purchase near-expiry items at a discount. Aiming for sustainability and affordability.</p>
+                        <div class="skills">
+                            <span class="badge">C++</span>
+                            <span class="badge">MySQL</span>
+                            <span class="badge">HTML</span>
+                            <span class="badge">CSS</span>
+                        </div>
                     </div>
                     <img src="images/FreshSaver.GIF" alt="Fresh Saver Service" class="project-image-right"/>
                 </div>
