Update index.html, styles.css, and script.js

--- a/index.html
+++ b/index.html
@@ -85,14 +85,22 @@
                 <h1 id="education">Education</h1>
                 <div class="education-section">
                     <div class="education-item">
-                        <h3>Conestoga College, Waterloo, ON</h3>
-                        <p>Advanced Diploma of Software Engineering Technology</p>
-                        <p>09/2022 - Present</p>
+                        <h3 onclick="toggleDescription('conestogaDescription')" class="collapsible">Conestoga College, Waterloo, ON</h3>
+                        <div id="conestogaDescription" class="education-description">
+                            <p>Advanced Diploma of Software Engineering Technology</p>
+                            <p>09/2022 - Present</p>
+                            <p>GPA 3.77/4.0</p>
+                            <p>Relevant courses: Operating system, Data structure, C/C++ Programming, Object-Oriented Programming, Windows Programming, Web Design and Development, Software Engineering Fundamental, System Programming</p>
+                        </div>
                     </div>
                     <div class="education-item">
-                        <h3>Inha University, Republic of Korea</h3>
-                        <p>Bachelor of English Education</p>
-                        <p>03/2010 - 02/2015</p>
+                        <h3 onclick="toggleDescription('inhaDescription')" class="collapsible"> Inha University, Republic of Korea</h3>
+                        <div id="inhaDescription" class="education-description">
+                            <p>Bachelor of English Education</p>
+                            <p>03/2010 - 02/2015</p>
+                            <p>GPA 3.94/4.5</p>
+                            <p>I have strong communication skills and fluency in English. I have also been recognized as an outstanding student several times during my studies. </p>
+                        </div>
                     </div>
                 </div>
                 <br/>
